--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: How do I remove adaptors in Windows from my sequencing data?
+description: A guide on adaptor trimming in Windows for youe seq analysis
